@@ -1,3 +1,5 @@
+*2014-06-16	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.6
+*	Added - User accounts support
 *2014-06-15	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.5c
 *	Fixing last bug fix .. ahue
 *	Some minor changes
